# haskell-animation

./: README.md  animation.hs  haskell-animation.cabal
app/: Main.hs
src/Animation/: CLI.hs  Loop.hs  Render.hs  Transition.hs  Types.hs
