cabal-version:      2.4
name:               haskell-animation
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Roberto
maintainer:         mayanhavoc@gmail.com

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: README.md

library 
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends: base ^>=4.14.3.0
    exposed-modules: Animation.CLI
                    ,Animation.Loop
                    ,Animation.Types 
    other-modules:   Animation.Render
                    ,Animation.Transition

executable haskell-animation
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , haskell-animation
    hs-source-dirs:   app
    default-language: Haskell2010
